# tarifia

./: .gitignore  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile.prod  DEVELOPMENT.md  Dockerfile.web.prod  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  flake.nix  solo.yml
sdk/tarifia-sdk/: pyproject.toml
sdk/tarifia-sdk/tarifia_sdk/: _version.py  basesdk.py  benefit_grants.py  benefits.py  checkout_links.py  checkouts.py  clients.py  custom_fields.py  customer_meters.py  customer_portal.py  customer_seats.py  customer_session_sdk.py  customer_sessions.py  customers.py  discounts.py  disputes.py  downloadables.py  event_types.py  events.py  files.py  license_keys.py  members.py  meters.py  metrics_sdk.py  oauth2.py  orders.py  organization_access_tokens.py  organizations.py  payments.py  products.py  refunds.py  sdk.py  sdkconfiguration.py  seats.py  subscriptions.py  tarifia_benefit_grants.py  tarifia_customer_meters.py  tarifia_customers.py  tarifia_license_keys.py  tarifia_members.py  (+5 more)
sdk/tarifia-sdk/tarifia_sdk/_hooks/: sdkhooks.py  types.py
sdk/tarifia-sdk/tarifia_sdk/_webhooks/: __init__.py
sdk/tarifia-sdk/tarifia_sdk/ingestion/: _base.py
sdk/tarifia-sdk/tarifia_sdk/models/: __init__.py  address.py  addressdict.py  addressinput.py  alreadyactivesubscriptionerror.py  alreadycanceledsubscription.py  attachedcustomfield.py  attachedcustomfieldcreate.py  authorizationcodetokenrequest.py  authorizeorganization.py  authorizeresponseorganization.py  authorizeresponseuser.py  authorizeuser.py  balancecreditorderevent.py  (+690 more)
(+2473 files in other folders)
