[project]
name = "tarifia-sdk"
version = "0.31.7"
description = "Tarifia SDK compatibility package"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.13.4",
  "standardwebhooks>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tarifia_sdk"]
